--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "webpack --mode production",
+    "start": "webpack serve --open",
     "test": "jest"
   },
   "keywords": [],
@@ -12,8 +13,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.4",
-    "typescript": "^5.5.4"
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.5.4",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
